Fixed picture that was not showing for projects. Added hover effect for sidenav. Updated info on The Tech Academy button in Education section. Modified some html content

--- a/css/port_styles.css
+++ b/css/port_styles.css
@@ -16,7 +16,6 @@ ul {
 	left: 0;
 	background-color: rgb(0,0,0);
 	overflow-x: hidden;
-	padding-top: 20px;
 }
 
 .sidenav a {
@@ -33,13 +32,15 @@ ul {
 	border-bottom: 2px solid #fff;
 }
 
-
-
-.nav-link {
-	color: #fff;
+.sidenav ul li a:hover {
+	background-color: rgb(20,65,25);
+	color: #000;
+	font-weight: bold;
 }
 
-.navbar-brand:hover {
+.sidenav ul li:first-child a:hover {
+	background-color: rgb(30,30,30);
+	color: #fff;
 }
 
 /*===========================
